# imap-client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  message.eml
examples/: append.rs  fetch-smol-rustls.rs  fetch-tokio-rustls.rs  fetch.rs
src/: lib.rs  stream.rs
src/client/: mod.rs  smol.rs  tokio.rs  verifier.rs
src/stream/: blocking.rs  futures.rs  mod.rs  smol.rs  std.rs  tokio.rs
src/tasks/: mod.rs  resolver.rs
src/tasks/tasks/: append.rs  appenduid.rs  authenticate.rs  capability.rs  check.rs  copy.rs  create.rs  delete.rs  enable.rs  expunge.rs  fetch.rs  id.rs  list.rs  login.rs  logout.rs  mod.rs  move.rs  noop.rs  search.rs  select.rs  sort.rs  starttls.rs  store.rs  thread.rs
