[package]
name = "imap-client"
description = "Rust library to manage IMAP clients"
version = "0.1.5"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email"]
keywords = ["email", "imap", "client"]
homepage = "https://pimalaya.org/"
documentation = "https://github.com/pimalaya/imap-client/"
repository = "https://github.com/pimalaya/imap-client/"

[features]
std = []
futures = ["dep:futures-util"]
tokio = ["dep:tokio"]

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
imap-client = { path = ".", features = ["std", "futures", "tokio"] }
static_assertions = "1.1"
tokio = { version = "1.37", features = ["full"] }

[dependencies]
futures-util = { version = "0.3", optional = true, default-features = false }
imap-next = { version = "0.3", features = ["tag_generator", "starttls", "ext_id", "ext_metadata"] }
start-tls = "0.1"
thiserror = "2"
tokio = { version = "1.37", optional = true, default-features = false }
tracing = "0.1"

[patch.crates-io]
imap-next = { git = "https://github.com/duesee/imap-next" }
start-tls = { git = "https://github.com/pimalaya/core" }
