[package]
name = "imap-client"
description = "Rust library to manage IMAP clients"
version = "0.2.3"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["email"]
keywords = ["email", "imap", "client"]
homepage = "https://pimalaya.org/"
documentation = "https://github.com/pimalaya/imap-client/"
repository = "https://github.com/pimalaya/imap-client/"

[features]
default = []

# Executors
tokio = ["dep:tokio", "rip-starttls/tokio"]
smol = ["dep:smol", "rip-starttls/smol"]

# TLS providers
# tokio
tokio-rustls = [
    "tokio",
    "dep:tokio-rustls",
    "dep:rustls-platform-verifier",
    "rip-starttls/tokio",
]
tokio-native-tls = ["tokio", "dep:tokio-native-tls", "rip-starttls/tokio"]

# Vendored (mostly for OpenSSL)
#
vendored = ["tokio-native-tls?/vendored"]

# smol
async-native-tls = ["smol", "rip-starttls/smol", "dep:async-native-tls"]
futures-rustls = [
    "smol",
    "dep:rustls-platform-verifier",
    "rip-starttls/smol",
    "dep:futures-rustls",
]

[dev-dependencies]
static_assertions = "1.1"
tokio = { version = "1.37", features = ["full"] }
smol = { version = "2" }

[dependencies]
imap-next = { version = "0.3", features = [
    "tag_generator",
    "ext_id",
    "ext_metadata",
] }
rip-starttls = { version = "0.1", optional = true, default-features = false, git = "https://github.com/felinira/pimalaya-core", branch = "wip/smol-deps" }
rustls-platform-verifier = { version = "0.6", optional = true }
thiserror = "2"
tracing = "0.1"

# Executors
# Tokio
tokio = { version = "1.37", default-features = false, optional = true, features = [
    "io-util",
    "net",
    "time",
] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = [
    "logging",
    "tls12",
    "ring",
] }

# smol
smol = { version = "2.0", optional = true }
async-native-tls = { version = "0.5", optional = true }
futures-rustls = { version = "0.26", optional = true }

[[example]]
name = "fetch-tokio-rustls"
required-features = ["tokio", "tokio-rustls"]

[[example]]
name = "fetch-smol-rustls"
required-features = ["smol", "futures-rustls"]
